<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_view"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"

    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_home_white"
                        android:tint="@android:color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/home"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/normal_text_size" />

                    <ImageView
                        android:visibility="gone"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_cart"
                        android:tint="@android:color/white" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/drawer_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingStart="@dimen/small_margin"
                android:paddingEnd="@dimen/small_margin">

                <LinearLayout
                    android:id="@+id/lin_my_orders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_margin">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_orders"
                        android:tint="#6b6b6b" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/my_orders"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/lin_my_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_margin">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_shopping_cart"
                        android:tint="#6b6b6b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard"
                        android:textColor="@android:color/black" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lin_my_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_margin">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_user"
                        android:tint="#6b6b6b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_account"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_my_coupons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_margin"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_coupon"
                        android:tint="#6b6b6b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_coupons"
                        android:textColor="@android:color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_my_notifications"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:padding="@dimen/medium_margin">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:src="@drawable/ic_notifications"
                        android:tint="#6b6b6b" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/my_notifications"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/black" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#9e9d9d" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/lin_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/medium_margin"
                    android:paddingBottom="@dimen/small_margin"
                    android:text="@string/settings"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/lin_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/medium_margin"
                    android:paddingBottom="@dimen/small_margin"
                    android:text="@string/privacy_policy"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/lin_legal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/medium_margin"
                    android:paddingBottom="@dimen/small_margin"
                    android:text="@string/legal"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/lin_help_centre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/medium_margin"
                    android:paddingBottom="@dimen/small_margin"
                    android:text="@string/help_centre"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/lin_about_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="@dimen/medium_margin"
                    android:paddingTop="@dimen/small_margin"
                    android:paddingEnd="@dimen/medium_margin"
                    android:paddingBottom="@dimen/small_margin"
                    android:text="@string/about_us"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black" />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:gravity="start"
                android:paddingStart="@dimen/medium_margin"
                android:paddingTop="@dimen/very_small_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:paddingBottom="@dimen/very_small_margin"
                android:text="@string/chat_with_us"
                android:textColor="@android:color/black" />
            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/medium_margin"
                android:id="@+id/chat_with_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@drawable/background_button_primary_rectangle"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"

                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/medium_margin">

                <ImageView
                    android:layout_width="@dimen/layout_ic_images"
                    android:layout_height="@dimen/layout_ic_images"
                    android:src="@drawable/ic_chat"
                    android:tint="@android:color/white" />

                <TextView
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_now"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</com.google.android.material.navigation.NavigationView>