<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.matajarbynesto.orders.ae.matajarbynesto.orders.ui.activities.settings.AuthOTPVerification">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/medium_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_are_verifying_your_mobile_number"
                android:textColor="@color/darkGray" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin">

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:itemBackground="#ECECEC"
                android:textColor="@color/colorPrimary"
                app:OtpItemCount="5"
                app:OtpLineColor="#D1D1D1"
                app:OtpViewType="rectangle" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:onClick="usePassword"
            android:text="@string/try_with_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/resendOTP"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:onClick="btnClickVerify"
        android:text="@string/verify_otp"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/resendOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/large_margin"
        android:clickable="true"
        android:onClick="resendOTP"
        android:gravity="center_horizontal"
        android:text="@string/resend_otp"
        android:textColor="@android:color/white" />
</RelativeLayout>
